syntax="proto3";
package trpc.shortvideo.video;


option go_package = "github.com/Yamon955/ShortVideo/protocol/video/pb";

service Video {
    rpc GetFeeds(GetFeedsReq) returns (GetFeedsRsp);
    rpc GetPublishList(GetPublishListReq) returns (GetPublishListRsp);
    rpc GetLikeList(GetLikeListReq) returns (GetLikeListRsp);
    rpc GetCollectList(GetCollectListReq) returns (GetCollectListRsp);

}

service Publish {
    rpc Publish(PublishReq) returns (PublishRsp);
}

enum VIDEO_TAGS {
    ENTERTAINMENT = 0; // 娱乐
    BUSINESS = 1;      // 商业
    MUSIC = 2;         // 音乐
    LIFESTYLE = 3;     // 生活
    EDUCATION = 4;     // 教育
    TECHNOLOGY = 5;    // 科技
    Fashion = 6;       // 时尚
    SPORTS = 7;        // 运动
    AUTOMOTIVE = 8;    // 汽车
    ART = 9;           // 艺术
    NEWS = 10;         // 新闻
    GAMING = 11;       // 游戏
    HEALTH = 12;       // 健康
    DIY = 13;          // DIY
    CULTURE = 14;      // 文化
}

message GetFeedsReq {
    
}
message GetFeedsRsp {
}

message PublishReq {
    

}
message PublishRsp {
    int64 status_code = 1;
    string status_msg = 2;
    uint64 vid = 3;
}

message GetPublishListReq {
    int64 start_id = 1;
}
message GetPublishListRsp {
    int64 next_id = 1;
}

message GetLikeListReq {
    int64 start_id = 1;
}
message GetLikeListRsp {
    int64 next_id = 1;
}

message GetCollectListReq {
    int64 start_id = 1;
}
message GetCollectListRsp {
    int64 next_id = 1;
}

